2008-10-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* file.h (tino_file_openE, tino_file_open_createE)
	(tino_file_create_truncateE): O_LARGEFILE added, just to be safe

2008-09-28  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* data.h (tino_data_syncA, tino_data_file_syncA): added

	* getopt.h (tino_getopt_var_set_arg_imp): added single suffixes
	'd'eka [10], 'h'ecto [100], 'S'ector [512], 'C'D-Size [4096] and
	dual 'P/p'eta [2^50,10^15], 'E/e'xa [2^60,10^18], 'Z/z'etta
	[2^70,10^21] and 'Y/y'otta [2^80,10^24]
	(tino_getopt_var_set_arg_imp): Overflow detection corrected

2008-09-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile-tar.sh (exists): GAT fixes

	* Makefile (diff): GAT fixes

2008-09-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alarm.h (tino_alarm_run): watchdog now bites, too, when alarm
	processing takes too long.
	(tino_alarm_run, tino_alarm_stop, tino_alarm_set): Reentrancy and
	stopping while executed now supported.  (Note that multithreading
	still is not supported.)

2008-09-20  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* fileerr.h (tino_file_readA): added
	(tino_file_lockA): fixed

2008-09-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* ex.h (tino_verror_std, tino_verror): full prefix support
	(tino_verror_vext): added from tino_verror_ext

	* fileerr.h: created (mostly file locking routines)

	* file.h (tino_file_lockI, tino_file_lockE)
	(tino_file_lock_exclusiveE, tino_file_lock_sharedE)
	(tino_file_unlockI, tino_file_unlockE): added

2008-09-01  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alarm.h, alloc.h, arg.h, array.h, array_slist.h, auxbuf.h,
	bitfield.h block.h, buf.h, buf_line.h, buf_printf.h, codec.h,
	curl.h, data.h debug.h, dev.h, dir.h, dirty.h, err.h, exception.h,
	fatal.h, file.h file_aio.h, filetool.h, getini.h, getopt.h,
	hash.h, hasher.h, helpers.h hup.h, idea-vdl.h, iow.h, iow_all.h,
	iow_socket.h, iow_ssl.h, log.h longmath.h, main.h, main_file.h,